syntax = "proto2";

package smaragdine.protos.sample;

import "protos/jiffies.proto";
import "protos/nvml.proto";
import "protos/rapl.proto";

option java_multiple_files = true;
option java_package = "smaragdine.protos.sample";

message Sample {
  oneof data {
    // energy data
    RaplSample rapl = 1;
    NvmlSample nvml = 5;

    // jiffies data
    CpuSample cpu = 2;
    ProcessSample process = 3;
  }
}

message DataSet {
  // energy data
  repeated RaplSample rapl = 1;
  repeated NvmlSample nvml = 5;

  // jiffies data
  repeated CpuSample cpu = 2;
  repeated ProcessSample process = 3;
}
